--- a/src/pages/agendamentoCliente/index.scss
+++ b/src/pages/agendamentoCliente/index.scss
@@ -94,6 +94,9 @@
                     font-size: 1.6dvh; 
                     padding: 0.3dvh; 
                 }
+                .finalizada{
+                    background-color: #bebebe;
+                }
 
                 .serviço {
                     font-family: 'Roboto', sans-serif;
@@ -157,4 +160,72 @@
         width: 50%;
     }
 }
+    .modal {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: rgba(0, 0, 0, 0.5);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        .modal-content {
+            background: white;
+            width: 50dvh;
+            height: 20dvh;
+            border-radius: 8px;
+            text-align: center;
+
+            h2{
+                color: #7C57B8;
+                font-family: 'Roboto', sans-serif;
+                font-weight: 600;
+                margin-top: 3dvh;
+                font-size: 3.2dvh;
+            }
+            p{
+                font-family: 'Roboto', sans-serif;
+                font-weight: 400;
+                margin-top: 2.4dvh;
+            }
+            .sim{
+                height: 3dvh; 
+                width: 10dvh; 
+                border-radius: 0.9dvh; 
+                background-color: #7C57B8;
+                border: none;
+                color: #fff;
+                font-size: 1.7dvh; 
+                box-shadow: 0 8px 15px rgba(0, 26, 255, 0.3);
+                font-family: 'Roboto', sans-serif;
+                font-weight: 600;
+                transition: transform 0.3s ease;
+                margin-top: 3dvh;
+                &:hover {
+                    transform: scale(1.05);
+                }
+            }
+            .nao{
+                height: 3dvh; 
+                width: 10dvh; 
+                border-radius: 0.9dvh; 
+                background-color: #7C57B8;
+                border: none;
+                color: #fff;
+                font-size: 1.7dvh; 
+                box-shadow: 0 8px 15px rgba(0, 26, 255, 0.3);
+                font-family: 'Roboto', sans-serif;
+                font-weight: 600;
+                transition: transform 0.3s ease;
+                margin-left: 1dvh;
+                &:hover {
+                    transform: scale(1.05);
+                }
+            }
+            
+        }
+    }
+
+
 }
