--- a/src/pages/inicial/index.scss
+++ b/src/pages/inicial/index.scss
@@ -2,6 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Beau+Rivage&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Beau+Rivage&family=Libre+Franklin:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Rufina:wght@400;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Barlow+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Lily+Script+One&family=Sanchez:ital@0;1&display=swap');
 .div {
     background-color: #7C57B8;
     width: 100%;
@@ -93,9 +94,9 @@
                 justify-content: center;
                 z-index: 3; 
                 margin-bottom: 7dvh; 
-                font-family: "Libre Franklin", sans-serif;
+                font-family: "Sanchez", serif;
                 font-weight: 400;
-                font-style: normal;
+                font-style: italic;
                 margin-left: 15dvh;
             }
             
@@ -384,7 +385,8 @@
             gap: 10dvh;
             
             .informacoes{
-                margin-left: 46dvh;
+                margin-left: 37dvh;
+                margin-top: 6dvh;
                 .visita{
                     margin-top: 0.6dvh;
                     color: #635874;
