--- a/src/pages/inicial/index.scss
+++ b/src/pages/inicial/index.scss
@@ -3,6 +3,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Beau+Rivage&family=Libre+Franklin:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Rufina:wght@400;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Barlow+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Lily+Script+One&family=Sanchez:ital@0;1&display=swap');
+
 .div {
     background-color: #7C57B8;
     width: 100%;
@@ -585,6 +586,8 @@
             width: 35dvh; 
             max-width: 500px;
             border-radius: 2.5dvh;
+            display: flex;
+            flex-direction: column;
             .close {
                 color: #aaa;
                 position: absolute;
@@ -597,6 +600,29 @@
                 &:hover {
                     color: black;
                 }
+            }
+            .infor{
+                display: flex;
+                flex-direction: row;
+                img{
+                    height: 8dvh;
+                    width: 8dvh;
+                    margin: 2dvh;
+                }
+                p{
+                    margin-top: 3.1dvh;
+                    color: #fff;
+                    font-size: 2.5dvh;
+                    font-family: "Inter", serif;
+                    margin-left: 2.6dvh;
+
+                }
+            }
+            .linha2{
+                width: 100%;
+                height: 1px;
+                background-color: #00000000;
+
             }
         
         }
