--- a/src/pages/agendamentoCliente/index.scss
+++ b/src/pages/agendamentoCliente/index.scss
@@ -159,6 +159,51 @@
     }
     .dir{
         width: 50%;
+        display: flex;
+
+        flex-direction: column;
+        align-items: center;
+        position: relative;
+        .map{
+            margin-top: 9dvh;
+        }
+        .card-info{
+            display: flex;
+            flex-direction: row;
+            gap: 1.2dvh;
+            background-color: #fff;
+            padding: 1dvh;
+            border-radius: 1.6dvh;
+            position: absolute; 
+            top: 25.6dvh;
+            z-index: 1;
+            .txt{
+                display: flex;
+                flex-direction: column;
+                gap: 0.5dvh;
+                .p1{
+                    font-family: 'Roboto', sans-serif;
+                    font-weight: 800;
+                }
+                .p2{
+                    width: 34dvh;
+                    font-family: 'Roboto', sans-serif;
+                    font-weight: 500;
+                    color: #A3A3A3;
+                    font-size: 1.2dvh;
+                }
+            }
+            img{
+                height: 6dvh;
+                width: 6dvh;
+                border-radius: 10dvh;
+                display: flex;
+                align-items: center;
+            }
+        }
+        .card-info.hidden {
+    display: none;
+}
     }
 }
     .modal {
@@ -172,7 +217,7 @@
         justify-content: center;
         align-items: center;
         .modal-content {
-            background: white;
+            background: rgb(240, 240, 240);
             width: 50dvh;
             height: 20dvh;
             border-radius: 8px;
