--- a/src/pages/configConta/index.scss
+++ b/src/pages/configConta/index.scss
@@ -1,172 +1,216 @@
 @import url('https://fonts.googleapis.com/css2?family=Beau+Rivage&family=Libre+Franklin:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Rufina:wght@400;700&display=swap');
 
-
-.config{
-    background-color: #fff ;
-    height: 100dvh; 
+.config {
+    background-color: #fff;
+    height: 105vh; 
     display: flex;
     align-items: center;
     flex-direction: column;
-    
-    .header{
+
+    .header {
         width: 100%;
-        img{
-            width: 5.5dvh;
-            height: 5.5dvh;
-            display: flex;
-            justify-content: flex-start;
-            margin-top: 2.3dvh;
-            margin-left: 4dvh;
+        img {
+            width: 5.5vh;
+            height: 5.5vh;
+            margin: 2vh 0 0 7vh;
         }
-       
     }
-    .h1{
-        font-family: "Libre Franklin", serif ;
-        font-weight: 700;
-    }
-    .linha{
+
+    .linha {
         width: 100%;
         height: 1px;
         background-color: #000;
-        margin-top: 0.7dvh;
+        margin-top: 0.7vh;
     }
-    .foto-cliente{
-        border: #969696 solid 2px ;
-        border-radius: 2dvh;
+
+    .h1{
+        font-weight: 700;
+        font-family: 'Libre+Franklin ', sans-serif;
+        font-size: 3.4dvh;
+        margin-top: -1dvh;
+    }
+
+    .foto-cliente, .troca-nome, .box-excluir {
+        border: 1px solid #afafaf;
+        border-radius: 2vh;
+        width: 58%;
+        margin-top: 5vh;
         display: flex;
         flex-direction: column;
-        justify-content: baseline;
-        width: 70%;
-        height: 30dvh;
-        margin-top: 5dvh;
-        .texto-foto{
+    }
+
+    .foto-cliente {
+        height: 30vh;
+
+        .texto-foto {
             display: flex;
-            flex-direction: row;
-            
+            justify-content: space-between;
             height: 60%;
-            .text{
-            .alterar{
-                margin: 3dvh;
-                font-family: "Libre Franklin", serif ;
-                font-weight: 700;
-            }     
-            .carregar-text{
-                margin-left: 3dvh;
-                font-family: "Libre Franklin", serif ;
-                font-weight: 500;
-                color: #b1afaf;
-                font-size: 1.6dvh;
-            }     
-             }  
-            .icone{
-                height: 8.7dvh;
-                width: 8.7dvh;
-                margin-left: 87dvh;
-                margin-top: 4.7dvh;           
+            align-items: center;
+
+            .text {
+                .alterar {
+                    margin: 3vh;
+                    font-weight: 700;
+                    font-family: 'Libre+Franklin ', sans-serif;
+                    font-size: 3.4dvh;
+                }
+
+                .carregar-text {
+                    margin-left: 3vh;
+                    font-weight: 500;
+                    color: #b1afaf;
+                    font-size: 2vh;
+                    font-family: 'Libre+Franklin ', sans-serif;
+                }
+            }
+
+            .icone {
+                height: 9.7vh;
+                width: 9.7vh;
+                margin-right: 8dvh;
+            }
         }
 
-        }
-        
-        .botoes{
+        .botoes {
             background-color: #E6E6E6;
             height: 40%;
-            border-bottom-left-radius: 2dvh;
-            border-bottom-right-radius: 2dvh;
-            .classB{
-                gap: 2dvh; 
+            border-radius: 0 0 2vh 2vh;
+            display: flex;
+            justify-content: flex-end;
+            padding: 2vh;
+            align-items: center;
+            .classB {
+                gap: 2vh; 
                 display: flex;
-                justify-content: flex-end;
-                margin-top: 4dvh;
-                margin-right: 2dvh;
-            .b1{
-                color: #FF0000;
-                border: solid #FF0000 1px;
-                height: auto;
-                width: 16dvh;
-                border-radius: 0.7dvh;
-                font-family: "Libre Franklin", serif ;
-                font-weight: 700;
-                transition: transform 1s ease;
                 
+                .b1, .b2 {
+                    height: 5dvh    ;
+                    width: 16vh;
+                    border-radius: 0.7vh;
+                    font-weight: 700;
+                    transition: transform 1s ease;
+
+                    &:hover {
+                        transform: scale(1.08);
+                    }
+                }
+
+                .b1 {
+                    color: #FF0000;
+                    border: 1px solid #FF0000;
+                    font-size: 2.1dvh;
+                }
+
+                .b2 {
+                    color: #fff;
+                    background-color: #000;
+                    border: 1px solid #000;
+                    padding: 1.1vh;
+                    font-size: 2dvh;
+                }
             }
-            .b1:hover {
-                transform: scale(1.08);
-            }
-            .b2{
-                color: #fff;
-                border: solid #000 1px;
-                background-color: #000;
-                padding: 1.1dvh;
-                border-radius: 0.7dvh;
-                height: auto;
-                width: 16dvh;
-                font-family: "Libre Franklin", serif ;
-                font-weight: 700;
-                transition: transform 1s ease;
-            }
-            .b2:hover {
-                transform: scale(1.08);
-            }
-        }
         }
     }
 
+    .troca-nome {
+        height: 30vh;
 
-    .troca-nome{
-        font-family: "Libre Franklin", serif ;
-        border: #969696 solid 2px ;
-        border-radius: 2dvh;
-        display: flex;
-        flex-direction: column;
-        width: 70%;
-        height: 30dvh;
-        margin-top: 5dvh;
-        .nome-troca{
-            padding: 3dvh;
-            input{
-                font-family: "Libre Franklin", serif ;
-                padding: 1dvh;
-                margin-top: 3dvh;
-                height: 7dvh;
-                width: auto;
+        .exibição{
+            height: 60%;
+            h1{
+                margin: 2vh;
+                    font-weight: 700;
+                    font-family: 'Libre+Franklin ', sans-serif;
+                    font-size: 3.4dvh;
+            }
+            input {
+                border: 1px solid #8d8d8d;
+                height: 5vh;
+                width: 20dvh;
                 border-radius: 10px;
                 background-color: #E6E6E6;
+                margin-left: 2.4dvh;
             }
+
         }
 
-        .botao-salvar{
+        .botao-salvar {
             background-color: #E6E6E6;
-            height: 100%;
-            border-bottom-left-radius: 2dvh;
-            border-bottom-right-radius: 2dvh; 
+            height: 40%;
             display: flex;
             justify-content: end;
-            padding: 2dvh;
-        
-            .salvar{
-                border: solid #C9C9C9 1px;
-                height: 4dvh;
-                width: 16dvh;
-                border-radius: 0.7dvh;
-                font-family: "Libre Franklin", serif ;
-                font-weight: 700;
+            border-radius: 0 0 2vh 2vh;
+            display: flex;
+            align-items: center;
+            .salvar {
+                background-color: #C9C9C9;
+                height: 5dvh;
+                width: 16vh;
+                border-radius: 0.7vh;
+                font-weight: 500;
                 transition: transform 1s ease;
-            }
-            .salvar:hover{
-                transform: scale(1.08);
+                border: none;
+                margin-right: 3dvh;
+                font-size: 2.3dvh;
+                &:hover {
+                    transform: scale(1.08);
+                }
             }
         }
     }
-
-
-    .box-excluir{
-        font-family: "Libre Franklin", serif ;
-        border: #969696 solid 2px ;
-        border-radius: 2dvh;
-        display: flex;
-        flex-direction: column;
-        width: 70%;
-        height: 30dvh;
-        margin-top: 5dvh;
+    .box-excluir {
+        height: 30vh;
+        margin-bottom: 0.5dvh;
+        .exibição {
+            height: 60%;
+            h1 {
+                margin: 3vh;
+                font-weight: 700;
+                font-family: 'Libre+Franklin', sans-serif;
+                font-size: 3.4dvh;
+            }
+            p {
+                margin-left: 3vh;
+                font-weight: 500;
+                color: #b1afaf;
+                font-size: 2vh;
+                font-family: 'Libre+Franklin', sans-serif; 
+            }
+        }
+    
+        .botao-excluir {
+            background-color: #F5D2D2;
+            height: 40%;
+            display: flex;
+            justify-content: space-between; 
+            border-radius: 0 0 2vh 2vh;
+            align-items: center; 
+            padding: 0 3dvh; 
+    
+            .excluir {
+                background-color: #FD4D4D;
+                height: 5dvh;
+                width: 16vh;
+                border-radius: 0.7vh;
+                font-weight: 500;
+                transition: transform 1s ease;
+                border: none;
+                color: #fff;
+                font-family: 'Libre+Franklin', sans-serif;
+                font-size: 3dvh;
+                &:hover {
+                    transform: scale(1.08);
+                }
+            }
+            p {
+                font-weight: 500;
+                color: #FF0000;
+                font-size: 2vh;
+                font-family: 'Libre+Franklin', sans-serif;
+            }
+        }
     }
+    
+    
 }
