--- a/src/pages/inicial/index.scss
+++ b/src/pages/inicial/index.scss
@@ -68,7 +68,7 @@
             width: 100% ;
         }
     }
-    .vitin-do-capa {
+    .principal {
         position: relative; 
         top: 11.8%;
         
@@ -110,7 +110,7 @@
                 border-radius: 1dvh;
                 box-shadow: 0 8px 13px rgba(0, 0, 0, 0.3);
                 margin-bottom: 15dvh;
-                font-family: "Rufina", serif;
+                font-family: "Sanchez", serif;
                 font-weight: 400;
                 margin-right: 6dvh;
             }
@@ -601,7 +601,7 @@
                     color: black;
                 }
             }
-            .infor{
+            .informaceos{
                 display: flex;
                 flex-direction: row;
                 img{
@@ -618,12 +618,31 @@
 
                 }
             }
-            .linha2{
+            .linha2 {
                 width: 100%;
-                height: 1px;
-                background-color: #00000000;
-
+                height: 1px; 
+                background-color: #ffffff; 
+                margin-top: 10px; 
             }
+            .links{
+                display: flex ;
+                flex-direction: column;
+                margin-top: 2.3dvh;
+                .configuracao{
+                    text-decoration: none;
+                    color: #ffff;
+                    font-family: "Inter", serif;
+                    font-size: 2.3dvh;
+                }
+                .sair{
+                    text-decoration: none;
+                    color: #ffff;
+                    font-family: "Inter", serif;
+                    font-size: 2.3dvh;
+                    margin-top: 2.3dvh;
+                }
+            }
+            
         
         }
     }
