--- a/src/pages/serviços/index.scss
+++ b/src/pages/serviços/index.scss
@@ -485,64 +485,85 @@ body {
             
         }
     }
+    } 
     }
 
-        .modal-overlay {
+    .modal-overlay.sucesso{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        position: fixed;
+        z-index: 1000;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.5);
+
+        .modal-content {
+            background-color: white;
+            width: 65dvh;
+            height: 40dvh;
+            border-radius: 3.2dvh;
+            text-align: center;
             display: flex;
             justify-content: center;
             align-items: center;
-            position: fixed;
-            z-index: 1000;
-            left: 0;
-            top: 0;
-            width: 100%;
-            height: 100%;
-            background-color: rgba(0, 0, 0, 0.5);
-
-            .modal-content {
-                background-color: white;
-                width: 65dvh;
-                height: 40dvh;
-                border-radius: 3.2dvh;
-                text-align: center;
-                
-               img{
-                height: 6dvh;
-                width: 6dvh;
-                margin-top: 7dvh;
-               }
-               h2{
+           img{
+            height: 6dvh;
+            width: 6dvh;
+            margin-top: 1dvh;
+           }
+           h2{
+            font-family: "Inter", sans-serif;
+            font-weight: 600;
+            color: #6f07cf;
+            margin-top: 3dvh;
+           }
+           p{
+            font-family: "Inter", sans-serif;
+            margin-top: 3dvh;
+           }
+           .button{
+            display: flex;
+            flex-direction: row;
+            gap: 1.2dvh;
+            .b1{
+                height: 4dvh;
+                width: 15dvh;
+                border-radius: 7dvh;
+                background: linear-gradient(55deg, #6f07cf 35%, #a010b3,);
+                border: none;
+                color: #fff;
+                font-size: 2.4dvh;
+                box-shadow: 0 8px 15px rgba(0, 26, 255, 0.3);
                 font-family: "Inter", sans-serif;
                 font-weight: 600;
-                color: #6f07cf;
-                margin-top: 3dvh;
-               }
-               p{
+                transition: transform 1s ease;
+                margin-top: 4dvh;
+
+           }
+            .b2{
+                height: 4dvh;
+                width: 18dvh;
+                border-radius: 7dvh;
+                background: linear-gradient(55deg, #6f07cf 35%, #a010b3,);
+                border: none;
+                color: #fff;
+                font-size: 2.3dvh;
+                box-shadow: 0 8px 15px rgba(0, 26, 255, 0.3);
                 font-family: "Inter", sans-serif;
-                margin-top: 3dvh;
-               }
-               button{
-                    height: 5dvh;
-                    width: 21dvh;
-                    border-radius: 7dvh;
-                    background: linear-gradient(55deg, #6f07cf 35%, #a010b3,);
-                    border: none;
-                    color: #fff;
-                    font-size: 3dvh;
-                    box-shadow: 0 8px 15px rgba(0, 26, 255, 0.3);
-                    font-family: "Inter", sans-serif;
-                    font-weight: 600;
-                    transition: transform 1s ease;
-                    margin-top: 4dvh;
-               }
-               button:hover {
-                transform: scale(1.09); 
-            }
-            }
+                font-weight: 600;
+                transition: transform 1s ease;
+                margin-top: 4dvh;
+           }
+           button:hover {
+            transform: scale(1.09); 
+           }
+           
         }
-    
+        }
     }
-    
 
 
 
