--- a/src/pages/inicial/index.scss
+++ b/src/pages/inicial/index.scss
@@ -53,6 +53,7 @@
             font-family: "Libre Franklin", sans-serif;
             font-weight: 200;
             font-style: normal;
+            cursor: pointer;
         }
         .Link::after{
             content: " ";
