--- a/src/pages/configConta/index.scss
+++ b/src/pages/configConta/index.scss
@@ -69,6 +69,7 @@
                 height: 9.7vh;
                 width: 9.7vh;
                 margin-right: 8dvh;
+                border-radius: 100dvh;
             }
         }
 
