--- a/src/components/serviços/index.scss
+++ b/src/components/serviços/index.scss
@@ -59,7 +59,7 @@
       flex-direction: column; 
       align-items: flex-start; 
       gap: 3vw;
-
+      margin-left: 26.3dvh;
       .trabalho, .valor {
         width: 100%; 
         font-size: 2.5vw; 
@@ -76,6 +76,7 @@
 @media (max-width: 768px) {
   .informacoes {
     .info {
+      margin-left: 10dvh;
       .trabalho, .valor {
         font-size: 3vw;
       }
@@ -92,6 +93,7 @@
 @media (max-width: 480px) {
   .informacoes {  
     .info {
+      
       .trabalho, .valor {
         font-size: 3vw; 
       }
